--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3'
+version: '3.1'
 services:
-  db:
-    image: my-postgres:latest
+  postgres:
+    image: postgres:latest
     environment:
       - POSTGRES_USER=mybatis
       - POSTGRES_PASSWORD=iova
       - POSTGRES_DB=mybatis
     ports:
       - "5432:5432"
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
