Add Postgresql persistence configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.h2.console.enabled=true
 logging.level.root=INFO
+com.iova.mybatis.postgres.url=jdbc:postgresql://localhost:5432/postgres
+com.iova.mybatis.postgres.username=mybatis
+com.iova.mybatis.postgres.password=iova
