--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 com.iova.mybatis.postgres.url=jdbc:postgresql://localhost:5432/postgres
 com.iova.mybatis.postgres.username=mybatis
 com.iova.mybatis.postgres.password=iova
+server.port=8888
